clusters/vollminlab-cluster/kyverno/kyverno/patches/kyverno-admission-controller-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyverno-admission-controller
  namespace: kyverno
spec:
  template:
    metadata:
      labels:
        app: kyverno-admission-controller
        env: production
        category: security
