clusters/vollminlab-cluster/kyverno/kyverno/patches/kyverno-cleanup-controller-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyverno-cleanup-controller
  namespace: kyverno
  labels:
    app: kyverno-cleanup-controller
    env: production
    category: security
