clusters/vollminlab-cluster/kyverno/kyverno/patches/kyverno-reports-controller-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyverno-reports-controller
  namespace: kyverno
  labels:
    app: kyverno-background-controller
    env: production
    category: security
