clusters/vollminlab-cluster/kyverno/kyverno/patches/cleanup-webhook-patch.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: kyverno-cleanup-validating-webhook-cfg
webhooks:
  - name: kyverno-cleanup-controller.kyverno.svc
    failurePolicy: Ignore
