clusters/vollminlab-cluster/kyverno/kyverno/patches/policy-webhook-patch.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: kyverno-policy-validating-webhook-cfg
webhooks:
  - name: validate.kyverno.svc-fail
    failurePolicy: Ignore
